--- a/foundations/01-css-methods/index.html
+++ b/foundations/01-css-methods/index.html
@@ -12,7 +12,8 @@
       p {
         background-color: green;
         color: white;
-        font-size: 18px}
+        font-size: 18px
+      }
   </head>
   <body>
     <div>Style me via the external method!</div>
