--- a/foundations/01-css-methods/index.html
+++ b/foundations/01-css-methods/index.html
@@ -14,7 +14,9 @@
         color: white;
         font-size: 18px
       }
+    </style>
   </head>
+
   <body>
     <div>Style me via the external method!</div>
     <p>I would like to be styled with the internal method, please.</p>
